# perceival

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/nlp/korean/KMOU-NER/: README.md
datasets/nlp/korean/KoNLI/: README.md
datasets/nlp/korean/NAVER-NER/: README.md
datasets/nlp/korean/NSMC/: README.md
datasets/nlp/korean/kobest_v1/: load_dataset.py
datasets/nlp/korean/mc4/: README.md  download_dataset.py
datasets/nlp/korean/oscar-2109/: README.md
datasets/nlp/korean/oscar-2201/: README.md
datasets/nlp/multi_language/amazon_massive_intent/: README.md
datasets/nlp/multi_language/wikipedia/: README.md
models/: example.py
models/nlp/: language_perceiver.py
models/vision/: example.py
tasks/nlp/: language_task_dataset.py  language_task_decoder.py  language_task_encoder_decoder.py  task_config.toml  task_preparation.py  train_multi_task_lm.py
tasks/nlp/paws/: README.md
tasks/nlp/tatoeba/: README.md
tasks/nlp/wikipedia/: load_dataset.py
